--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,64 +1,64 @@
 
 <resources>
-    <color name="seed">#006c4a</color>
-    <color name="md_theme_light_primary">#006C4A</color>
+    <color name="seed">#006d42</color>
+    <color name="md_theme_light_primary">#006D42</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#8BF8C4</color>
-    <color name="md_theme_light_onPrimaryContainer">#002114</color>
-    <color name="md_theme_light_secondary">#4D6357</color>
+    <color name="md_theme_light_primaryContainer">#93F7BB</color>
+    <color name="md_theme_light_onPrimaryContainer">#002111</color>
+    <color name="md_theme_light_secondary">#4E6355</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#CFE9D8</color>
-    <color name="md_theme_light_onSecondaryContainer">#0A1F16</color>
-    <color name="md_theme_light_tertiary">#3D6473</color>
+    <color name="md_theme_light_secondaryContainer">#D1E8D6</color>
+    <color name="md_theme_light_onSecondaryContainer">#0C1F14</color>
+    <color name="md_theme_light_tertiary">#3B6471</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#C0E9FB</color>
-    <color name="md_theme_light_onTertiaryContainer">#001F29</color>
+    <color name="md_theme_light_tertiaryContainer">#BFE9F8</color>
+    <color name="md_theme_light_onTertiaryContainer">#001F27</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FBFDF9</color>
+    <color name="md_theme_light_background">#FBFDF8</color>
     <color name="md_theme_light_onBackground">#191C1A</color>
-    <color name="md_theme_light_surface">#FBFDF9</color>
+    <color name="md_theme_light_surface">#FBFDF8</color>
     <color name="md_theme_light_onSurface">#191C1A</color>
-    <color name="md_theme_light_surfaceVariant">#DCE5DD</color>
-    <color name="md_theme_light_onSurfaceVariant">#404943</color>
-    <color name="md_theme_light_outline">#707973</color>
-    <color name="md_theme_light_inverseOnSurface">#EFF1ED</color>
-    <color name="md_theme_light_inverseSurface">#2E312F</color>
-    <color name="md_theme_light_inversePrimary">#6EDBAA</color>
+    <color name="md_theme_light_surfaceVariant">#DCE5DC</color>
+    <color name="md_theme_light_onSurfaceVariant">#404942</color>
+    <color name="md_theme_light_outline">#717972</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F1ED</color>
+    <color name="md_theme_light_inverseSurface">#2E312E</color>
+    <color name="md_theme_light_inversePrimary">#77DAA1</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#006C4A</color>
-    <color name="md_theme_light_outlineVariant">#C0C9C1</color>
+    <color name="md_theme_light_surfaceTint">#006D42</color>
+    <color name="md_theme_light_outlineVariant">#C0C9C0</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#6EDBAA</color>
-    <color name="md_theme_dark_onPrimary">#003825</color>
-    <color name="md_theme_dark_primaryContainer">#005237</color>
-    <color name="md_theme_dark_onPrimaryContainer">#8BF8C4</color>
-    <color name="md_theme_dark_secondary">#B4CCBD</color>
-    <color name="md_theme_dark_onSecondary">#1F352A</color>
-    <color name="md_theme_dark_secondaryContainer">#364B40</color>
-    <color name="md_theme_dark_onSecondaryContainer">#CFE9D8</color>
-    <color name="md_theme_dark_tertiary">#A5CDDE</color>
-    <color name="md_theme_dark_onTertiary">#063543</color>
-    <color name="md_theme_dark_tertiaryContainer">#244C5A</color>
-    <color name="md_theme_dark_onTertiaryContainer">#C0E9FB</color>
+    <color name="md_theme_dark_primary">#77DAA1</color>
+    <color name="md_theme_dark_onPrimary">#003920</color>
+    <color name="md_theme_dark_primaryContainer">#005230</color>
+    <color name="md_theme_dark_onPrimaryContainer">#93F7BB</color>
+    <color name="md_theme_dark_secondary">#B5CCBA</color>
+    <color name="md_theme_dark_onSecondary">#213528</color>
+    <color name="md_theme_dark_secondaryContainer">#374B3E</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D1E8D6</color>
+    <color name="md_theme_dark_tertiary">#A3CDDC</color>
+    <color name="md_theme_dark_onTertiary">#033541</color>
+    <color name="md_theme_dark_tertiaryContainer">#224C58</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BFE9F8</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
     <color name="md_theme_dark_background">#191C1A</color>
-    <color name="md_theme_dark_onBackground">#E1E3DF</color>
+    <color name="md_theme_dark_onBackground">#E1E3DE</color>
     <color name="md_theme_dark_surface">#191C1A</color>
-    <color name="md_theme_dark_onSurface">#E1E3DF</color>
-    <color name="md_theme_dark_surfaceVariant">#404943</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C0C9C1</color>
-    <color name="md_theme_dark_outline">#8A938C</color>
+    <color name="md_theme_dark_onSurface">#E1E3DE</color>
+    <color name="md_theme_dark_surfaceVariant">#404942</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C0C9C0</color>
+    <color name="md_theme_dark_outline">#8A938B</color>
     <color name="md_theme_dark_inverseOnSurface">#191C1A</color>
-    <color name="md_theme_dark_inverseSurface">#E1E3DF</color>
-    <color name="md_theme_dark_inversePrimary">#006C4A</color>
+    <color name="md_theme_dark_inverseSurface">#E1E3DE</color>
+    <color name="md_theme_dark_inversePrimary">#006D42</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#6EDBAA</color>
-    <color name="md_theme_dark_outlineVariant">#404943</color>
+    <color name="md_theme_dark_surfaceTint">#77DAA1</color>
+    <color name="md_theme_dark_outlineVariant">#404942</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
