--- a/app/src/main/res/layout/bottom_sheet_timeline.xml
+++ b/app/src/main/res/layout/bottom_sheet_timeline.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:padding="8dp"
+                android:scrollbars="vertical"
                 android:text="@string/todo" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
