--- a/app/src/main/res/layout/dialog_fragment_choose.xml
+++ b/app/src/main/res/layout/dialog_fragment_choose.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
+                android:text="FCFS"
                 app:simpleItems="@array/simple_items" />
 
         </com.google.android.material.textfield.TextInputLayout>
